--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="built/css/styles.css" rel="stylesheet">
+  
+
 </head>
 <body>
   
+    <div class="mainConteiner" ng-app>
+      <h1>It's work! Realy</h1>
+      <p>{{2 + 2}}</p>
+
+      <input type="text" ng-model="data.lable">
+      <button class="btn btn-success">{{data.lable}}</button>
+    </div>
+    
+  
+  <script src="built/js/vendors.js"></script>
+  <script src="built/js/scripts.js"></script> 
 </body>
 </html>
