Доработка сайта, правим баги чистим код

--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
-
+  
   <link rel="stylesheet" href="build/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/ngGallery.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">  
-    
   <link rel="stylesheet" href="build/css/styles.css">  
-    
  
 </head>
-
 <body ng-cloak>
   <div class="main-wrapper">
     <header ng-include="'templates/general/navigation.html'"></header>
@@ -29,9 +25,7 @@
   
   <script src="build/js/vendors.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="node_modules/angular-youtube-embed/src/angular-youtube-embed.js"></script>
-  <script src="build/js/scripts.js"></script>
-  
+  <script src="build/js/scripts.min.js"></script>
 </body>
 
 </html>
